[package]
name = "redis-case"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2", features = [
    "diesel_postgres",
    "deadpool_redis",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
dotenv = "0.15"
once_cell = "1.19"
rand_core = "0.6.4"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
